<resources>
	<string name="app_name">Quick System Info</string>
	<string name="info_not_available">Information not available</string>
	<string name="processor">Processor</string>
	<string name="memory">Memory</string>
	<string name="sd_storage">SD card storage</string>
	<string name="internal_storage">Internal storage</string>
	<string name="battery_level">Battery</string>
	<string name="retrieving">Retrieving...</string>
	<string name="about_phone">About phone</string>
	<string name="more_info">More information</string>
	<string name="more_info_summary">View detailed phone info</string>
	<string name="actions">Actions</string>
	<string name="refresh">Refresh</string>
	<string name="export">Export</string>
	<string name="select_all">Select All</string>
	<string name="deselect_all">Deselect All</string>
	<string name="no_app_selected">No application selected.</string>
	<string name="no_app_show">No application available under current filter condition.</string>
	<string name="warning">Warning</string>
	<string name="warning_msg">Applications will be exported to \'%s\', any existing file in the folder will be overwritten, are you sure to continue?</string>
	<string name="cont">Continue</string>
	<string name="start_exporting">Start exporting...</string>
	<string name="exporting">Exporting %s...</string>
	<string name="copy_error">Error happened during copying: %s</string>
	<string name="exported">Total %s applications exported.</string>
	<string name="exported_to">Total %1$s applications exported to \'%2$s\'.</string>
	<string name="export_complete">Export completed</string>
	<string name="error_sdcard">Please ensure the SD card is mounted as writable with sufficient free space.</string>
	<string name="computing">Computing...</string>
	<string name="about">About</string>
	<string name="about_msg">Version %1$s&lt;br>&lt;br>Shawn Q.&lt;br>&lt;a href="mailto:qauck.aa@gmail.com">qauck.aa@gmail.com&lt;/a>&lt;br>&lt;br>&lt;a href="%2$s">[ Support this app ]&lt;/a>&lt;br></string>
	<string name="close">Close</string>
	<string name="filter_title">Application Type</string>
	<string name="all_apps">All</string>
	<string name="sys_apps">System</string>
	<string name="user_apps">User</string>
	<string name="version">Version</string>
	<string name="loading">Refreshing...</string>
	<string name="end_proc_hint">- Click a task to end\u00A0\n- Click me to end all\u00A0</string>
	<string name="switch_to">Switch To</string>
	<string name="end_task">End Task</string>
	<string name="tab_info">Basic Info</string>
	<string name="tab_apps">Applications</string>
	<string name="tab_procs">Processes</string>
	<string name="preference">Preferences</string>
	<string name="export_dir">Backup Folder</string>
	<string name="error_create_folder">Failed to create folder %s.</string>
	<string name="error_switch_task">Cannot switch to this task.</string>
	<string name="net_address">Network</string>
	<string name="verbose">Verbose</string>
	<string name="debug">Debug</string>
	<string name="info">Info</string>
	<string name="error">Error</string>
	<string name="asser_t">Fatal</string>
	<string name="emmergency">Emmergency</string>
	<string name="alert">Alert</string>
	<string name="critical">Critical</string>
	<string name="notice">Notice</string>
	<string name="log_level">Log Level</string>
	<string name="tag_filter">Tag Filter</string>
	<string name="pid_filter">PID Filter</string>
	<string name="none">None</string>
	<string name="no_log_info">No log item found.</string>
	<string name="collector_head">#Created by %1$s version %2$s\n\n</string>
	<string name="storage_summary">Total: %1$s, Free: %2$s</string>
	<string name="view_logs">View Logs</string>
	<string name="send_log">Send Log</string>
	<string name="plain_text">Plain Text</string>
	<string name="csv">CSV</string>
	<string name="html">HTML</string>
	<string name="copy_text">Copy Text</string>
	<string name="tab_netstat">Net States</string>
	<string name="update_speed">Update Speed</string>
	<string name="high">High</string>
	<string name="normal">Normal</string>
	<string name="low">Low</string>
	<string name="paused">Paused</string>
	<string name="no_ip_info">No public information available for this IP address at this time.</string>
	<string name="query_ip_msg">Acquiring Remote Information...</string>
	<string name="ip_location">Remote Information</string>
	<string name="protocol">Protocol</string>
	<string name="local_remote_addr">Local/Remote Address</string>
	<string name="state">State</string>
	<string name="copy_ip">Copy Remote Address</string>
	<string name="location_info">&lt;b>%1$s&lt;/b>&lt;br>%2$s&lt;br>Country: %3$s&lt;br>Region: %4$s&lt;br>City: %5$s</string>
	<string name="view_map">View in Map</string>
	<string name="remote_query">Remote Information Query</string>
	<string name="enabled">Enabled</string>
	<string name="disabled">Disabled</string>
	<string name="wifi_only">Wi-Fi Only</string>
	<string name="compressed">(Compressed)</string>
	<string name="send_report">Send Report</string>
	<string name="log">Log</string>
	<string name="no_report">No report has been generated.</string>
	<string name="no_report_item">No report item selected.</string>
	<string name="device">Device</string>
	<string name="model">Model</string>
	<string name="product">Product</string>
	<string name="brand">Brand</string>
	<string name="release">Release</string>
	<string name="build">Build</string>
	<string name="locale">Locale</string>
	<string name="device_info">Device Info</string>
	<string name="sys_version">System Version</string>
	<string name="time">Time</string>
	<string name="message">Message</string>
	<string name="pid">Process ID</string>
	<string name="tag">Tag</string>
	<string name="pkg_name">Package Name</string>
	<string name="app_label">Application Label</string>
	<string name="flags">Flags</string>
	<string name="source">Source</string>
	<string name="importance">Importance</string>
	<string name="proc_name">Process Name</string>
	<string name="no_cpu_info">CPU info not found.</string>
	<string name="no_mem_info">MEM info not found.</string>
	<string name="no_sc_freq_info">Scaling CPU frequency state not found.</string>
	<string name="sc_freq">Scaling CPU frequency: </string>
	<string name="size_warning">You are sending very large size content. To avoid potential memory issue, it is recommended to send as compressed.\n\nDo you want to send the content as compressed?</string>
	<string name="idle_info">, Idle: %s</string>
	<string name="sensors">Sensor</string>
	<string name="gps">GPS</string>
	<string name="batt_plugged">Plugged:</string>
	<string name="unplugged">Unplugged</string>
	<string name="batt_temp">Temperature:</string>
	<string name="batt_voltage">Voltage:</string>
	<string name="batt_tech">Technology:</string>
	<string name="batt_status">Status:</string>
	<string name="batt_level">Level:</string>
	<string name="not_charging">Not Charging</string>
	<string name="full">Full</string>
	<string name="discharging">Discharging</string>
	<string name="charging">Charging</string>
	<string name="batt_health">Health:</string>
	<string name="failure">Failure</string>
	<string name="over_voltage">Over Voltage</string>
	<string name="dead">Dead</string>
	<string name="over_heat">Over Heat</string>
	<string name="good">Good</string>
	<string name="unknown">Unknown</string>
	<string name="sensor_info">%s sensor presents</string>
	<string name="sensor_info2">%s sensors present</string>
	<string name="wait_data">Waiting for data</string>
	<string name="cache_storage">System cache</string>
	<string name="sensor_msg">Vendor: %1$s\nVersion: %2$s\nPower: %3$smA\nResolution: %4$s\nMax Range: %5$s</string>
	<string name="sort">Sort</string>
	<string name="sort_type">Sort by</string>
	<string name="sort_direction">Direction</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="total_size">Total Size</string>
    <string name="cache_size">Cache Size</string>
    <string name="data_size">Data Size</string>
    <string name="code_size">Code Size</string>
    <string name="name">Name</string>
    <string name="help">Online Help</string>
    <string name="cpu_usage">CPU Usage</string>
    <string name="memory_usage">Memory Usage</string>
    <string name="remove">Remove</string>
    <string name="no_item_remove">No item selected to remove</string>
    <string name="multi_ignored">%s processes ignored</string>
    <string name="single_ignored">%s process ignored</string>
    <string name="protect">Protected</string>
    <string name="hidden">Hidden</string>
    <string name="ignored_list">Ignored List</string>
    <string name="ignored_as">Ignored as</string>
    <string name="ignore">Ignore</string>
    <string name="a2sd_storage">A2SD storage</string>
    <string name="check">Click to Check</string>
    <string name="network_type">Network Type</string>
    <string name="extra_info">Extra Info</string>
    <string name="not_roaming">Not roaming</string>
    <string name="roaming">Roaming</string>
    <string name="roaming_state">Roaming State</string>
    <string name="local_address">Local Address</string>
    <string name="public_address">Public Address</string>
    <string name="details">Details</string>
    <string name="show_remote_msg">Show remote host name instead of IP address after the remote query</string>
    <string name="display_remote_name">Display Remote Name</string>
    <string name="remote_address">Remote Address</string>
    <string name="restore">Restore</string>
    <string name="file_size">File Size</string>
    <string name="installation">Install State</string>
    <string name="installed_ver">%1$s (Installed %2$s)</string>
    <string name="scanning">Scanning %s</string>
	<string name="no_apk_show">No application file found.</string>
	<string name="no_apk_selected">No file selected.</string>
    <string name="show_cpu_summary">Show CPU usage for each process</string>
    <string name="show_memory_summary">Show memory usage for each process</string>
    <string name="show_cpu_usage">Show CPU Usage</string>
    <string name="show_memory_usage">Show Memory Usage</string>
    <string name="bug_failed">Failed to generate the bug report, please send the Logcat log to the author manually.</string>
	<string name="bug_detail">An exception was caught during the last launch of Quick System Info. Do you want to send the error details to the author to help further addressing this issue?\n\nThe information collected is for debug purpose only, it will NOT contain any data with regard to your privacy.</string>
	<string name="bug_title">Bug Report</string>
	<string name="oops_msg">Click to report this exception.</string>
	<string name="oops">Oops, An exception.</string>
	<string name="agree">I Agree</string>
    <string name="file_date">File Date</string>
    <string name="installed_date">Install Date</string>
    <string name="delete_file_warn">Are you sure to delete following files?\n\n%s</string>
    <string name="delete_file_failed">Failed to delete file: %s</string>
    <string name="delete_file">Delete</string>
    <string name="show_file_date_sum">Show date info for each file</string>
    <string name="show_file_date">Show File Date</string>
    <string name="show_file_size_sum">Show size info for each file</string>
    <string name="show_file_size">Show File Size</string>
    <string name="show_app_date_sum">Show install date for each application</string>
    <string name="show_app_size_sum">Show size info for each application</string>
    <string name="show_app_date">Show Application Date</string>
    <string name="show_app_size">Show Application Size</string>
    <string name="run_failed">Cannot launch the application.</string>
    <string name="run">Launch</string>
    <string name="show_backup_state">Show Backup State</string>
    <string name="show_backup_state_sum">Check application backup state and display in differnt colors</string>
</resources>