<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/preference">
		<Preference android:key="export_dir" android:title="@string/export_dir" />
		<Preference android:key="app_filter" android:title="@string/filter_title" />
		<CheckBoxPreference android:key="show_size"
			android:summary="@string/show_app_size_sum" android:title="@string/show_app_size"></CheckBoxPreference>
		<CheckBoxPreference android:key="show_date"
			android:title="@string/show_app_date" android:summary="@string/show_app_date_sum"></CheckBoxPreference>
		<CheckBoxPreference android:key="show_backup_state"
			android:title="@string/show_backup_state" android:summary="@string/show_backup_state_sum"></CheckBoxPreference>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/sort">
		<Preference android:key="sort_type" android:title="@string/sort_type" />
		<Preference android:key="sort_direction" android:title="@string/sort_direction" />
	</PreferenceCategory>

</PreferenceScreen>
